[gd_scene load_steps=2 format=3 uid="uid://cittjgi0wcvay"]

[ext_resource type="Script" uid="uid://j156wke0ve26" path="res://scripts/windows/process_found_wps_window_controller.gd" id="1_4d4os"]

[node name="ProcessWpsWND" type="Window"]
title = "PROCESS_WPS_WINDOW_TTL"
initial_position = 1
size = Vector2i(600, 100)
transient = true
exclusive = true
script = ExtResource("1_4d4os")

[node name="MainUIVBC" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProcessWpsMsgLB" type="Label" parent="MainUIVBC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 6
text = "PROCESS_WPS_WINDOW_MSG_LB"
horizontal_alignment = 1
autowrap_mode = 2

[node name="OptButtonsHBC" type="HBoxContainer" parent="MainUIVBC"]
layout_mode = 2

[node name="OkBTN" type="Button" parent="MainUIVBC/OptButtonsHBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "YES_BTN"

[node name="NoBTN" type="Button" parent="MainUIVBC/OptButtonsHBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "NO_BTN"
